--- a/src/common/grpc-expr/Cargo.toml
+++ b/src/common/grpc-expr/Cargo.toml
@@ -16,6 +16,7 @@ common-macro.workspace = true
 common-query.workspace = true
 common-time.workspace = true
 datatypes.workspace = true
+prost.workspace = true
 snafu.workspace = true
 table.workspace = true
 
