--- a/src/query/Cargo.toml
+++ b/src/query/Cargo.toml
@@ -75,6 +75,7 @@ num = "0.4"
 num-traits = "0.2"
 paste = "1.0"
 rand.workspace = true
+serde_json.workspace = true
 session = { workspace = true, features = ["testing"] }
 statrs = "0.16"
 stats-cli = "3.0"
