--- a/src/sql/Cargo.toml
+++ b/src/sql/Cargo.toml
@@ -28,6 +28,7 @@ iso8601 = "0.6.1"
 itertools.workspace = true
 lazy_static.workspace = true
 regex.workspace = true
+serde_json.workspace = true
 snafu.workspace = true
 sqlparser.workspace = true
 sqlparser_derive = "0.1"
