--- a/src/common/procedure/Cargo.toml
+++ b/src/common/procedure/Cargo.toml
@@ -22,6 +22,7 @@ common-telemetry.workspace = true
 futures.workspace = true
 humantime-serde.workspace = true
 object-store.workspace = true
+rand.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 smallvec.workspace = true
