--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -13,6 +13,7 @@ arrow-schema.workspace = true
 async-recursion = "1.0"
 async-trait.workspace = true
 bytes.workspace = true
+cache.workspace = true
 catalog.workspace = true
 client.workspace = true
 common-base.workspace = true
