--- a/src/flow/Cargo.toml
+++ b/src/flow/Cargo.toml
@@ -13,6 +13,7 @@ arrow-schema.workspace = true
 async-recursion = "1.0"
 async-trait.workspace = true
 bytes.workspace = true
+cache.workspace = true
 catalog.workspace = true
 client.workspace = true
 common-base.workspace = true
@@ -47,6 +48,8 @@ meta-client.workspace = true
 minstant = "0.1.7"
 nom = "7.1.3"
 num-traits = "0.2"
+operator.workspace = true
+partition.workspace = true
 prost.workspace = true
 query.workspace = true
 serde.workspace = true
