--- a/config/metasrv.example.toml
+++ b/config/metasrv.example.toml
@@ -77,21 +77,21 @@ provider = "raft_engine"
 broker_endpoints = ["127.0.0.1:9092"]
 
 ## Number of topics to be created upon start.
-kafka_topic_num_topics = 64
+num_topics = 64
 
 ## Topic selector type.
 ## Available selector types:
 ## - `round_robin` (default)
-kafka_topic_selector_type = "round_robin"
+selector_type = "round_robin"
 
 ## A Kafka topic is constructed by concatenating `name_prefix` and `topic_id`.
-kafka_topic_name_prefix = "greptimedb_wal_topic"
+topic_name_prefix = "greptimedb_wal_topic"
 
 ## Expected number of replicas of each partition.
-kafka_topic_replication_factor = 1
+replication_factor = 1
 
 ## Above which a topic creation operation will be cancelled.
-kafka_topic_create_topic_timeout = "30s"
+create_topic_timeout = "30s"
 ## The initial backoff for kafka clients.
 backoff_init = "500ms"
 
