--- a/tests/conf/metasrv-test.toml.template
+++ b/tests/conf/metasrv-test.toml.template
@@ -4,7 +4,7 @@ provider = "raft_engine"
 {{ else }}
 provider = "kafka"
 broker_endpoints = {kafka_wal_broker_endpoints | unescaped}
-kafka_topic_num_topics = 64
-kafka_topic_selector_type = "round_robin"
-kafka_topic_name_prefix = "distributed_test_greptimedb_wal_topic"
+num_topics = 64
+selector_type = "round_robin"
+name_prefix = "distributed_test_greptimedb_wal_topic"
 {{ endif }}
